# physics_sim_edu

./: .gitignore  LICENSE  README.md  README.zh.md  TODO.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py
assets/synthnova_assets/: .gitignore  README.md  README.zh.md  install.sh  pyproject.toml
assets/synthnova_assets/default_assets/default_ground_plane/: .collect.mapping.json  default_ground_plane.usd  default_ground_plane.xml
assets/synthnova_assets/default_assets/example/ioai/closet/: closet.xml
assets/synthnova_assets/default_assets/example/ioai/table/: material.mtl  table.xml
assets/synthnova_assets/docs/: make_docs.sh  view_docs.sh
assets/synthnova_assets/docs/source/: conf.py  index.rst
assets/synthnova_assets/docs/source/rsts/: examples.rst  installation.rst  license.rst  overview.rst  troubleshooting.rst
assets/synthnova_assets/examples/: download.py  update.py
assets/synthnova_assets/robot/galbot_one_charlie_description/: CMakeLists.txt  convert_to_mjcf.py  galbot_one_charlie.srdf  galbot_one_charlie.urdf  galbot_one_charlie.xml  package.xml
assets/synthnova_assets/robot/galbot_one_charlie_description/config/dynamics_param/: link_parameters.toml
assets/synthnova_assets/robot/galbot_one_charlie_description/config/joint_limit/: galbot_left_hand_joint_limit.csv  galbot_right_hand_joint_limit.csv  gripper_hitbot_joint_limit.csv  head_joint_limit.csv  leg_joint_limit.csv  right_arm_joint_limit.csv  suction_cup_joint_limit.csv
assets/synthnova_assets/robot/galbot_one_charlie_description/config/transform_matrix/: flange_trans_matrix.csv  gripper_hitbot_trans_matrix.csv  head_trans_matrix.csv  left_arm_trans_matrix.csv  leg_trans_matrix.csv  omni_chassis_trans_matrix.csv  right_arm_trans_matrix.csv  suction_cup_trans_matrix.csv  torso_trans_matrix.csv
assets/synthnova_assets/robot/galbot_one_charlie_description/launch/: galbot_left_hand2.rviz  galbot_one_charlie.rviz  galbot_right_hand2.rviz  view_galbot_left_hand2.launch  view_galbot_right_hand2.launch  view_robot.launch
assets/synthnova_assets/robot/galbot_one_charlie_description/meshes/arm/: left_arm_link2.mtl  left_arm_link3.mtl  left_arm_link6.mtl  left_arm_link7.mtl  left_arm_link7.stl  right_arm_link4.mtl  right_arm_link5.mtl  right_arm_link6.mtl  right_arm_link7.mtl  right_arm_link7.stl
assets/synthnova_assets/robot/galbot_one_charlie_description/meshes/box_flange/: box_flange_left.stl  box_flange_right.stl
assets/synthnova_assets/robot/galbot_one_charlie_description/meshes/camera/: arm_camera.stl
assets/synthnova_assets/robot/galbot_one_charlie_description/meshes/chassis/: omni_chassis_base_link.mtl
assets/synthnova_assets/robot/galbot_one_charlie_description/meshes/flange/: flange_base_link.stl
assets/synthnova_assets/robot/galbot_one_charlie_description/meshes/galbot_hand/: left_finger1_link1.stl  left_finger1_link2.stl  left_finger1_link3.stl  left_finger1_link4.stl  left_finger2_link1.stl  left_finger2_link2.stl  left_finger2_link3.stl  left_finger2_link4.stl  left_finger3_link1.stl  left_finger3_link2.stl  left_finger3_link3.stl  left_finger3_link4.stl  left_finger4_link1.stl  left_finger4_link2.stl  left_finger4_link3.stl  left_finger4_link4.stl  right_finger1_link1.stl  right_finger1_link2.stl  right_finger1_link3.stl  right_finger1_link4.stl  right_finger2_link1.stl  right_finger2_link2.stl  right_finger2_link3.stl  right_finger2_link4.stl  right_finger3_link1.stl  right_finger3_link2.stl  right_finger3_link3.stl  right_finger3_link4.stl  right_finger4_link1.stl  right_finger4_link2.stl  right_finger4_link3.stl  right_finger4_link4.stl
assets/synthnova_assets/robot/galbot_one_charlie_description/meshes/galbot_hand2/: left_finger1_link1.stl  left_finger1_link2.stl  left_finger1_link3.stl  left_finger1_link4.stl  left_finger2_link1.stl  left_finger2_link2.stl  left_finger2_link3.stl  left_finger2_link4.stl  left_finger3_link1.stl  left_finger3_link2.stl  left_finger3_link3.stl  left_finger3_link4.stl  left_finger4_link1.stl  left_finger4_link2.stl  left_finger4_link3.stl  left_finger4_link4.stl  left_finger5_link1.stl  left_finger5_link2.stl  left_finger5_link3.stl  left_finger5_link4.stl  right_finger1_link1.stl  right_finger1_link2.stl  right_finger1_link3.stl  right_finger1_link4.stl  right_finger2_link1.stl  right_finger2_link2.stl  right_finger2_link3.stl  right_finger2_link4.stl  right_finger3_link1.stl  right_finger3_link2.stl  (+10 more)
assets/synthnova_assets/robot/galbot_one_charlie_description/spheres/: galbot_one_charlie_body_spheres.yml
assets/synthnova_assets/robot/galbot_one_charlie_description/xacro/: galbot_one_charlie.xacro
assets/synthnova_assets/src/synthnova_assets/: __init__.py  cli.py  downloader.py
src/synthnova_config/: .gitignore  README.md  README.zh.md  pyproject.toml
src/synthnova_config/examples/: create_custom_config.py  create_predefined_config.py  modify_config.py
src/synthnova_config/src/synthnova_config/: __init__.py  physics_simulator_config.py  render_simulator_config.py
src/synthnova_config/src/synthnova_config/cloud/: __init__.py  cloud_stream.py
src/synthnova_config/src/synthnova_config/custom/: __init__.py  user_custom_example.py
src/synthnova_config/src/synthnova_config/logger/: __init__.py  logger.py
src/synthnova_config/src/synthnova_config/object/: __init__.py  ground_plane.py  object.py
src/synthnova_config/src/synthnova_config/robot/: __init__.py  robot.py
src/synthnova_config/src/synthnova_config/scenario/: __init__.py  scenario.py
src/synthnova_config/src/synthnova_config/sensor/: __init__.py  isx031c_fisheye.py  livox_mid360_imu.py  livox_mid360_lidar.py  realsense_d405.py  realsense_d415.py  realsense_d435.py  taobao_tele_camera.py
src/synthnova_config/src/synthnova_config/sim/: __init__.py  isaac_sim.py  mujoco.py  sim.py
src/synthnova_config/src/synthnova_config/utils/: __init__.py  io.py
src/synthnova_config/tests/: test_cloud_stream.py  test_ground_plane.py  test_imu.py  test_lidar_3d.py  test_logger.py  test_object.py  test_rgb_camera.py  test_robot.py  test_scenario.py
(+198 files in other folders)
