# Define the build system configuration.
[build-system]
# Specify the packages required for building the project.
requires = ["hatchling"]
# Set the build backend to use Hatchling.
build-backend = "hatchling.build"

# Define project metadata and configuration.
[project]
# Project name.
name = "physics_simulator"
# Short description of the project.
description = """
A physics simulator for SynthNova simulation toolkit, 
designed to provide a physics simulation engine for the simulation toolkit.
"""
# Indicate that the version is determined dynamically.
dynamic = ["version"]
# Specify the README file and its format.
readme = { file = "README.md", content-type = "text/markdown" }
# Define the minimum supported Python version.
requires-python = ">=3.10"
# Specify the project's license identifier.
# license = "LicenseRef-Galbot-Proprietary"
# Include additional license files.
license-files = ["LICENSE"]
# Define the project authors.
authors = [{ name = "Chenyu Cao", email = "ruziniuuuuu@gmail.com" }]
# Define the project maintainers.
maintainers = [{ name = "Chenyu Cao", email = "ruziniuuuuu@gmail.com" }]
# List relevant keywords for discoverability.
keywords = ["simulation", "robotics", "synthnova", "mujoco"]
# Define mandatory dependencies required at runtime.
dependencies = [
    "mujoco",
    "auro_utils>=0.0.8",
    "Pillow",
    "pynput",
    "pyopengl==3.1.9",
    "open3d",
    "tifffile",
    "opencv-python",
    "mink",
    "loop_rate_limiters",
]

[project.optional-dependencies]
pyroki = [
    "pyroki @ git+https://github.com/chungmin99/pyroki.git"
]

# Configure Hatch to automatically determine the project version.
[tool.hatch.version]
# Define the file containing the version information.
path = "src/physics_simulator/__init__.py"

# Define external project-related URLs.
[project.urls]
# Official simulation platform URL.
"Simulation Platform" = "https://simulation.galbot.com"
# Official data platform URL.
"Quasar Data Platform" = "https://data.galbot.com"

[tool.hatch.metadata]
allow-direct-references = true
