# Define the build system configuration.
[build-system]
# Specify the packages required for building the project.
requires = ["hatchling"]
# Set the build backend to use Hatchling.
build-backend = "hatchling.build"

# Define project metadata and configuration.
[project]
# Project name.
name = "synthnova-assets"
# Short description of the project.
description = """
Provides default assets and convenient tools for downloading and managing data resources.
"""
# Indicate that the version is determined dynamically.
dynamic = ["version"]
# Specify the README file and its format.
readme = { file = "README.md", content-type = "text/markdown" }
# Define the minimum supported Python version.
requires-python = ">=3.10"
# Specify the project's license identifier.
# license = "LicenseRef-Galbot-Proprietary"
# Include additional license files.
license-files = ["LICENSE"]
# Define the project authors.
authors = [
    { name = "Herman Ye", email = "hermanye233@icloud.com" },
    { name = "Junjie Jia", email = "jiajunjie@galbot.com" }
]
# Define the project maintainers.
maintainers = [{ name = "Junjie Jia", email = "jiajunjie@galbot.com" }]
# List relevant keywords for discoverability.
keywords = ["assets", "simulation", "synthnova"]
# Define mandatory dependencies required at runtime.
dependencies = [
    "aiohttp",
    "loguru",
    "pathlib"
]

[project.scripts]
sn_assets = "synthnova_assets.cli:main"

# Configure Hatch to automatically determine the project version.
[tool.hatch.version]
# Define the file containing the version information.
path = "src/synthnova_assets/__init__.py"

# Define external project-related URLs.
[project.urls]
# Official simulation platform URL.
"Simulation Platform" = "https://simulation.galbot.com"
# Official data platform URL.
"Quasar Data Platform" = "https://data.galbot.com"

[tool.hatch.metadata]
allow-direct-references = true
